--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -90,7 +90,7 @@ body {
 .portada2 {
   width: 100%;
   height: 450px;
-  background: url("./jacalitoport5.jpg");
+  background: url("https://menutechdeveloper.github.io/bddImg/assets/img/fachadaatoron.jpg");
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
