--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -14,13 +14,15 @@ body {
   }
 }
 
-.portada video {
+.portada {
+  background: url("https://menutechdeveloper.github.io/bddImg/assets/img/fachadaatoron.jpg");
   width: 100%;
+  height:450px;
 }
 
 @media (max-width: 992px) {
   .portada {
-    width: 100%;
+    height: 3000px;
   }
 }
 
